# luacmake

./: .gitignore  .gitmodules  .luacheckrc  LICENSE  init.lua  luacmake  luacmake.bat  luacmake.code-workspace  luacmake.lua  template.CMakeLists.txt  template.manifest
package-builtin/lua53/: CMakeLists.txt
package-builtin/lua54/: CMakeLists.txt
package-builtin/olua/: CMakeLists.txt
package/lua-bytebuffer/: CMakeLists.txt  manifest
package/lua-cjson/: CMakeLists.txt  manifest
package/lua-clang/: CMakeLists.txt  manifest
package/lua-fs/: CMakeLists.txt  manifest
package/lua-lfs/: CMakeLists.txt  manifest
package/lua-lpeg/: CMakeLists.txt  lpeg.def  lua-re.cpp  manifest
package/lua-openssl/: CMakeLists.txt  manifest
package/lua-openxlsx/: CMakeLists.txt  manifest
package/lua-pbc/: CMakeLists.txt  lua-protobuf.cpp  manifest
package/lua-pugixml/: CMakeLists.txt  manifest
package/lua-sproto/: CMakeLists.txt  lua-sproto.cpp  manifest
package/lua-xlsx/: CMakeLists.txt  manifest
package/lua-xxtea/: CMakeLists.txt  manifest
tools/: util.cmake
